infra/terraform/ecs-ec2/alb-sg.tf
resource "aws_security_group" "sahil_alb_sg" {
  name        = "allow_all_alb"
  description = "Allow all outbound traffic"

  vpc_id      = local.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.tags, tomap({ "Name" = "${var.cust_name}-alb-sg" }))
}
